--- a/webServer/views/register.html
+++ b/webServer/views/register.html
@@ -275,7 +275,7 @@
 					var option = {
 						'showElement': $('.js-timer'),
 						'showTips': "%s秒后重新获取",
-						'btnTips': '<button class="mui-btn js-check-mobile">重新获取验证码</button>'
+						'btnTips': '<button class="mui-btn js-check-mobile" onclick="sendCode()">重新获取验证码</button>'
 					};
 					sendCodeUI(option, 60);
 				}
