--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -26,59 +26,6 @@
 					alert('您使用的 IE 浏览器版本过低, 推荐使用 Chrome 浏览器或 IE8 及以上版本浏览器.');
 				}
 			}
-			window.sysinfo = {
-				'uniacid': '4',
-				'acid': '4',
-				'siteroot': 'http://wechat.fangsuo.com/',
-				'siteurl': 'http://wechat.fangsuo.com/app/index.php?c=home&i=4&t=4',
-				'attachurl': 'http://wechat.fangsuo.com/attachment/',
-				'attachurl_local': 'http://wechat.fangsuo.com/attachment/',
-				'attachurl_remote': '',
-				'cookie': {
-					'pre': '127d_'
-				}
-			};
-			// jssdk config 对象
-			jssdkconfig = null || {};
-			// 是否启用调试
-			jssdkconfig.debug = false;
-			jssdkconfig.jsApiList = [
-				'checkJsApi',
-				'onMenuShareTimeline',
-				'onMenuShareAppMessage',
-				'onMenuShareQQ',
-				'onMenuShareWeibo',
-				'hideMenuItems',
-				'showMenuItems',
-				'hideAllNonBaseMenuItem',
-				'showAllNonBaseMenuItem',
-				'translateVoice',
-				'startRecord',
-				'stopRecord',
-				'onRecordEnd',
-				'playVoice',
-				'pauseVoice',
-				'stopVoice',
-				'uploadVoice',
-				'downloadVoice',
-				'chooseImage',
-				'previewImage',
-				'uploadImage',
-				'downloadImage',
-				'getNetworkType',
-				'openLocation',
-				'getLocation',
-				'hideOptionMenu',
-				'showOptionMenu',
-				'closeWindow',
-				'scanQRCode',
-				'chooseWXPay',
-				'openProductSpecificView',
-				'addCard',
-				'chooseCard',
-				'openCard',
-				'openAddress'
-			];
 		</script>
 	</head>
 
@@ -165,13 +112,13 @@
 
 					</div>
 				</div>
-				<div class="mui-text-center" style="margin-top:25px;margin-left: 15px;margin-right: 15px;">
+				<!--<div class="mui-text-center" style="margin-top:25px;margin-left: 15px;margin-right: 15px;">
 					<form id="logoutForm" action="/users/logout" method="get">
 						<a class="mui-btn mui-btn-success mui-btn-block log-in" onclick="logout()" style="background-color: #FF4040;border:0;">
 							退出会员中心
 						</a>
 					</form>
-				</div>
+				</div>-->
 			</div>
 			<script type="text/javascript">
 				//				$(function() {
