--- a/webServer/views/register.html
+++ b/webServer/views/register.html
@@ -243,7 +243,7 @@
 			}
 			
 			if(data.idnumber.length != 18) {
-				util.toast('请输入正确的身份证号');
+				util.toast('请输入正确的身份证号', '', 'error');
 				return false;
 			}
 
