--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -101,7 +101,7 @@
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 10px;padding: 0;"><span><%=phone%></span></div>
 						</div>
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 100px;padding-right: 0;">
-							<img src="http://www.whichbank.com.cn/assets/images/logo_.png" style="width: 80px;height: 80px;margin-top: 10px;margin-left: -20px;">
+							<img src="<%=icon%>" style="width: 80px;height: 80px;margin-top: 10px;margin-left: -20px;">
 						</div>
 						<!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height: 70px;background-color: red;padding: 0;">
 							<img id="barcode1" style="width: 100%;height: 100%;" />
