--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -116,8 +116,8 @@
 
 					</div>
 				</div>
-				<div class="panles" style="height: 260px; text-align:center">
-					<div id="erCode" style="margin: 20px;padding: 0;"></div>
+				<div class="panles" style="height: 240px; text-align:center">
+					<img id="qrcode" src="/qrcode/show" style="margin: 0px;padding: 0;"></img>
 				</div>
 				<!--<div class="mui-text-center" style="margin-top:25px;margin-left: 15px;margin-right: 15px;">
 					<form id="logoutForm" action="/users/logout" method="get">
@@ -128,13 +128,13 @@
 				</div>-->
 			</div>
 			<script type="text/javascript">
-				$(function() {　　
-					$("#erCode").qrcode({
-						width: 200, //宽度 
-						height: 200, //高度 
-						text: "www.helloweba.com" //任意内容 
-					});
-				});
+//				$(function() {　　
+//					$("#erCode").qrcode({
+//						width: 200, //宽度 
+//						height: 200, //高度 
+//						text: "www.helloweba.com" //任意内容 
+//					});
+//				});
 			</script>
 	</body>
 
