--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -94,7 +94,7 @@
 				<div class="avatar mui-text-center">
 					<h1 class="fs_login_h1" style="color:#FF4040">会员中心<br><small style="color:#FF6347">The&nbsp; Member&nbsp; Center</small></h1>
 				</div>
-				<div class="panles" style="height: 140px;">
+				<div class="panles" style="height: 120px;">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding: 0;">
 						<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9" style="height: 100px;">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin-top: 10px;color: #FF6347;padding: 0;">
@@ -109,14 +109,14 @@
 						</div>
 						<!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height: 70px;background-color: red;padding: 0;">
 							<img id="barcode1" style="width: 100%;height: 100%;" />
-						</div>-->
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height: 20px;text-align: center;padding: 0;">
-							<!--span> FS&nbsp;8005&nbsp;6303</span>-->
 						</div>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height: 20px;text-align: center;padding: 0;">
+							
+						</div>-->
 
 					</div>
 				</div>
-				<div class="panles" style="height: 240px; text-align:center">
+				<div class="panles" style="height: auto!important; text-align:center">
 					<img id="qrcode" src="/qrcode/show" style="margin: 0px;padding: 0;"></img>
 				</div>
 				<!--<div class="mui-text-center" style="margin-top:25px;margin-left: 15px;margin-right: 15px;">
