--- a/webServer/views/mgrCenter.html
+++ b/webServer/views/mgrCenter.html
@@ -41,23 +41,18 @@
 				// todo 
 			});
 
-			function confirmActive() {
-				
-			}
+			function checkInfo(data) {
 
-			function active(data) {
-				var activeDt = {
-					url: "/users/active",
-					data: data,
-					successCallback: function(data) {
-						//do nothing
-						util.toast(data['message'], '');
-						setTimeout(function() {
-							window.location.href = data.url;
-						}, 1000);
-					}
+				if(data.username.trim().length == 0) {
+					util.toast('请输入正确的用户名', '', 'error');
+					return false;
 				}
-				sendRequest(loginDt);
+				if(data.password.trim().length == 0) {
+					util.toast('请输入正确的密码', '', 'error');
+					return false;
+				}
+
+				return true
 			}
 
 			function sendRequest(request) {
@@ -89,6 +84,47 @@
 					}
 				});
 			}
+
+			function confirmCreate() {
+				var data = {
+
+				};
+				createCode(data);
+			}
+
+			function createCode(data) {
+				var loginDt = {
+					url: "/accode/create",
+					data: data,
+					successCallback: function(data) {
+						//do nothing
+						$('#code').val(data["code"]);
+						var option = {
+							'showElement': $('#createBtn'),
+							'showTips': "%s秒后重新生成",
+							'btnTips': '<button id="createBtn" class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmCreate()" style="background-color: #FF4040;border:0;">生成激活码</button>'
+						};
+						confirmBtnUI(option, 5);
+					}
+				}
+				sendRequest(loginDt);
+			}
+
+			function confirmBtnUI(option, sec) {
+				option.showElement.html(option.showTips.replace("%s", sec));
+				option.showElement.attr('disabled', true);
+				var timer = setInterval(function() {
+					sec--;
+					if(sec <= 0) {
+						clearInterval(timer);
+						sec = 60;
+						option.showElement.html(option.btnTips);
+						option.showElement.attr('disabled', false);
+					} else {
+						option.showElement.html(option.showTips.replace("%s", sec));
+					}
+				}, 1000);
+			}
 		</script>
 	</head>
 
@@ -96,7 +132,7 @@
 		<div class="container container-fill">
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#FF4040">会员激活<br>
+					<h1 class="fs_login_h1" style="color:#FF4040">管理员中心</br>
             <small style="color:#FF6347">Log&nbsp; in</small>
         </h1>
 				</div>
@@ -104,38 +140,17 @@
 					<div class="js-sendcode">
 						<div class="mui-input-group mui-mt15">
 							<div class="mui-input-row">
-								<input name="mobile" id="activecode" class=" en" type="text" placeholder="请输入激活码" />
+								<input name="code" id="code" class="en" type="text" placeholder="点击生成激活码" disabled="true" style="color: black;" />
 							</div>
 						</div>
 
 						<div class="mui-text-center" style="margin-top:25px ">
-							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmActive()" style="background-color: #FF4040;border:0;">
-                    激活
+							<button id="createBtn" class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmCreate()" style="background-color: #FF4040;border:0;">
+                    生成激活码
                 </button>
 						</div>
 					</div>
 				</div>
-
-				<!--<div class="mui-active mc-login-code" id="login-code">
-					<div class="js-sendcode">
-						<div class="mui-input-group mui-mt15">
-							<div class="mui-input-row">
-								<div id="pay198" class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="background: white;height: 100%;text-align: center;border-style: solid;border-width: 1px;border-color: red;" onclick="clickPay(this.id)">
-									<span style="line-height: 44px;color: black;">198</span>
-								</div>
-								<div id="pay298" class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="background: white;height: 100%;text-align: center;border-style: solid;border-width: 0px;border-color: red;" onclick="clickPay(this.id)">
-									<span style="line-height: 44px;color: black;">298</span>
-								</div>
-							</div>
-						</div>
-
-						<div class="mui-text-center" style="margin-top:25px ">
-							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmBuy()" style="background-color: #FF4040;border:0;">
-                    购买
-                </button>
-						</div>
-					</div>
-				</div>-->
 			</div>
 		</div>
 	</body>
