--- a/webServer/views/register.html
+++ b/webServer/views/register.html
@@ -95,11 +95,11 @@
 
 					</div>
 
-					<div class="mui-text-center mui-mt15 small">
+					<!--<div class="mui-text-center mui-mt15 small">
 						<form id="loginForm" action="/users/login" method="get">
 							<a onclick="sendLogin()"><strong style="color: #FF4040">会员登录</strong></a>
 						</form>
-					</div>
+					</div>-->
 				</div>
 			</div>
 	</body>
