--- a/webServer/views/active.html
+++ b/webServer/views/active.html
@@ -121,6 +121,14 @@
 						</div>
 					</div>
 				</div>
+				<div class="mui-content-padded">
+					<div class="mui-text-center mui-mt15 small">
+							<strong style="color: #FF6347;"> * 门店员工会为您提供激活码 * </strong>
+					</div>
+					<div class="mui-text-center mui-mt15 small" style="margin-top: 0 !important;">
+							<strong style="color: #FF6347;">Getting it from Whichbankers</strong>
+					</div>
+				</div>
 
 				<!--<div class="mui-active mc-login-code" id="login-code">
 					<div class="js-sendcode">
