--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -136,7 +136,12 @@
 				<!--<div class="panles" style="height: 40px; text-align:center;">
 					<label style="color: #868686;font-size: 12px;" id="currentTime"></label>
 				</div>-->
-				<div id="countdown" class="countDownClass"></div>
+				<div id="countdown" class="countDownClass" style="align-content: center;text-align: center;">
+					<strong style="color: #FF6347;">会员权益剩余时间</strong>
+				</div>
+				<div>
+					
+				</div>
 			</div>
 			<script type="text/javascript">
 				$(function() {
