--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -133,12 +133,12 @@
 				<div class="panles" style="height: auto!important; text-align:center">
 					<img id="qrcode" src="/qrcode/show" style="margin: 0px;padding: 0;"></img>
 				</div>
-				<div class="panles" style="height: 70px; text-align:center;">
+				<div class="panles" style="height: 60px; text-align:center;">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<label style="color: #868686;font-size: 12px;">会员权益剩余时间</label>
+					<span style="color: #868686;font-size: 12px;">会员权益剩余时间</span>
 					</div>
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<label style="font-size: 10px;" id="currentTime"></label>
+					<span style="font-size: 10px;" id="currentTime"></span>
 					</div>
 				</div>
 				<!--<div id="countdown" class="countDownClass" style="align-content: center;text-align: center;">
