--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -112,7 +112,7 @@
 				
 				.ii {
 					display: none;
-					background-image: url(../public/images/face.png);
+					background-image: url(../images/face.png);
 					border-radius: 50%;
 					width: 20px;
 					height: 20px;
