--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -194,7 +194,7 @@
 								// change to set time string
 								timestamp = res["remain"];
 								if(res["faceid"] != "")
-									document.getElementsByClassName("ii").setAttribute('display','');
+									document.getElementById("msgNum").style.display="";
 								clock();
 								setInterval("clock()", 1000)
 							}
