--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -111,7 +111,7 @@
 				}
 				
 				.ii {
-					display: none;
+					/*display: none;*/
 					background-image: url(../images/face.png);
 					border-radius: 50%;
 					width: 20px;
