--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -113,7 +113,7 @@
 				.ii {
 					/*display: none;*/
 					/*background: red;*/
-					background-image: url(/images/face.png);
+					background-image: url("/images/face.png");
 					width: 20px;
 					height: 20px;
 					top: -8px;
