--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -111,9 +111,9 @@
 				}
 				
 				.ii {
-					/*display: none;*/
-					/*background: red;*/
-					background-image: url("/images/face.png");
+					display: none;
+					background: red;
+					/*background-image: url("/images/face.png");*/
 					width: 20px;
 					height: 20px;
 					top: -8px;
